Add and style contents of the header section

--- a/index.html
+++ b/index.html
@@ -9,7 +9,20 @@
 </head>
 
 <body>
-    <header id="header"></header>
+    <header id="header">
+        <div id="header1">
+            <figure>
+                <img src="youtube.png" alt="youtube-logo">
+            </figure>
+        </div>
+        <div id="header2">
+            <input type="text" placeholder="Search">
+        </div>
+        <div id="header3">
+            <button id="search">Search</button>
+            <button id="sign-in">Sign In</button>
+        </div>
+    </header>
     <div id="div-section">
         <div id="div-section1">
             <section id="video-section"></section>
