added top and bottom navigation links to footer

--- a/index.html
+++ b/index.html
@@ -19,8 +19,37 @@
             <aside id="side-section"></aside>
         </div>
     </div>
-    <div id="div-footer">
-        <footer id="footer"></footer>
+    <div id="div-footer"></div>
+    <footer id="footer">
+        <div id="footer-top">
+            <div id="footer-top1">
+                <a href="http://www.youtube.com"><img src="assets/youtube4.png" height="100" width="150" /></a>
+            </div>
+            <div id="footer-top2">
+                <button> Language: English &#8964;</button>
+                <button>Location: Uganda &#8964;</button>
+                <button>Restricted Mode: Off &#8964;</button>
+                <button>History</button>
+                <button>Help</button>
+            </div>
+        </div>
+        <div id="footer-bottom">
+            <ul style="font-weight: 50...ne;margin:0,0,8px;padding:0;border-color: white;">
+                <li class="liz">About</li>
+                <li class="liz">Press</li>
+                <li class="liz">Copyright</li>
+                <li class="liz">Creators</li>
+                <li class="liz">Advertise</li>
+                <li class="liz">Developers</li>
+            </ul>
+            <ul style="padding: 0;color: gray;">
+                <li class="liz2">Terms</li>
+                <li class="liz2">Privacy</li>
+                <li class="liz2">Policy & Safety</li>
+                <li class="liz2">Test new features</li>
+            </ul>
+        </div>
+    </footer>
     </div>
 
 
