editted the proportionality of the youtube logo in-line

--- a/index.html
+++ b/index.html
@@ -16,21 +16,21 @@
             <section id="comments-section"></section>
         </div>
         <div id="div-section2">
-            <aside id="side-section"></aside>
         </div>
     </div>
     <div id="div-footer"></div>
     <footer id="footer">
         <div id="footer-top">
             <div id="footer-top1">
-                <a href="http://www.youtube.com"><img src="assets/youtube4.png" height="100" width="150" /></a>
+                <a href="http://www.youtube.com"><img src="assets/youtube4.png"
+                        style="height: 90px; width: 150px;" /></a>
             </div>
             <div id="footer-top2">
-                <button> Language: English &#8964;</button>
-                <button>Location: Uganda &#8964;</button>
-                <button>Restricted Mode: Off &#8964;</button>
-                <button>History</button>
-                <button>Help</button>
+                <button class="ftop2"> Language: English &#8964;</button>
+                <button class="ftop2">Location: Uganda &#8964;</button>
+                <button class="ftop2">Restricted Mode: Off &#8964;</button>
+                <button class="ftop2">History</button>
+                <button class="ftop2">Help</button>
             </div>
         </div>
         <div id="footer-bottom">
