add video content to the video section

--- a/index.html
+++ b/index.html
@@ -5,13 +5,19 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
+    <!-- <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous"> -->
+    <!-- <script src="https://use.fontawesome.com/cc70a2e2f2.js"></script> -->
+    <link href="fonts/css/fontawesome.min.css" rel="stylesheet">
     <title>Document</title>
 </head>
 
 <body>
     <header id="header">
+        <div id="nav-header">
+            <button id="nav-bar"><i class="fas fa-bars"></i></button>
+        </div>
         <div id="header1">
-            <figure>
+            <figure>                
                 <img src="youtube.png" alt="youtube-logo">
             </figure>
         </div>
@@ -25,7 +31,9 @@
     </header>
     <div id="div-section">
         <div id="div-section1">
-            <section id="video-section"></section>
+            <section id="video-section">
+                <iframe width="670" height="370" src="https://www.youtube.com/embed/IB7jwQpOLDA" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            </section>
             <section id="comments-section"></section>
         </div>
         <div id="div-section2">
