modified footer css

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <button id="nav-bar"><i class="fas fa-bars"></i></button>
         </div>
         <div id="header1">
-            <figure>                
+            <figure>
                 <img src="youtube.png" alt="youtube-logo">
             </figure>
         </div>
@@ -32,7 +32,9 @@
     <div id="div-section">
         <div id="div-section1">
             <section id="video-section">
-                <iframe width="670" height="370" src="https://www.youtube.com/embed/IB7jwQpOLDA" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                <iframe width="670" height="370" src="https://www.youtube.com/embed/IB7jwQpOLDA" frameborder="0"
+                    allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
+                    allowfullscreen></iframe>
             </section>
             <section id="comments-section"></section>
         </div>
@@ -485,6 +487,7 @@
                 <li class="liz">Advertise</li>
                 <li class="liz">Developers</li>
             </ul>
+            <br>
             <ul style="padding: 0;color: gray;">
                 <li class="liz2">Terms</li>
                 <li class="liz2">Privacy</li>
