Adjust margins in header in style.css, reduce size of video section in index.html

--- a/index.html
+++ b/index.html
@@ -14,11 +14,11 @@
 <body>
     <header id="header">
         <div id="nav-header">
-            <button id="nav-bar"><i class="fas fa-bars"></i></button>
+            <button id="nav-bar"><i class="fas fa-bars"></i>IC</button>
         </div>
         <div id="header1">
             <figure>
-                <img src="youtube.png" alt="youtube-logo">
+                <img src="assets/youtube4.png" alt="youtube-logo" width="120" height="50">
             </figure>
         </div>
         <div id="header2">
@@ -32,7 +32,7 @@
     <div id="div-section">
         <div id="div-section1">
             <section id="video-section">
-                <iframe width="670" height="370" src="https://www.youtube.com/embed/IB7jwQpOLDA" frameborder="0"
+                <iframe width="600" height="350" src="https://www.youtube.com/embed/IB7jwQpOLDA" frameborder="0"
                     allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
                     allowfullscreen></iframe>
             </section>
