Add font awesome and comment section to index.html

--- a/index.html
+++ b/index.html
@@ -5,16 +5,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <!-- <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous"> -->
-    <!-- <script src="https://use.fontawesome.com/cc70a2e2f2.js"></script> -->
-    <link href="fonts/css/fontawesome.min.css" rel="stylesheet">
+    <script src="https://kit.fontawesome.com/fdccd4f74a.js" crossorigin="anonymous"></script>
     <title>Document</title>
 </head>
 
 <body>
     <header id="header">
         <div id="nav-header">
-            <button id="nav-bar"><i class="fas fa-bars"></i>IC</button>
+            <button id="nav-bar"><i class="fas fa-bars"></i></button>
         </div>
         <div id="header1">
             <figure>
@@ -32,11 +30,36 @@
     <div id="div-section">
         <div id="div-section1">
             <section id="video-section">
-                <iframe width="600" height="350" src="https://www.youtube.com/embed/IB7jwQpOLDA" frameborder="0"
+                <iframe width="605" height="350" src="https://www.youtube.com/embed/IB7jwQpOLDA" frameborder="0"
                     allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
                     allowfullscreen></iframe>
             </section>
-            <section id="comments-section"></section>
+            <section id="comments-section">
+                <h1>Kobe Bryant Speaks a day before his death. He predicted his death.</h1>
+                <div>
+                    <div>
+
+                    </div>
+                </div>
+            </section>
+            <section id="comments-section">
+                <h4>Published on Feb 27, 2014</h4>
+                <p>
+                    How do you contribute to open source? In this video, I'll describe the easiest way to make a simple contribution to an open source project -- without using the command line, a text editor, "forking a repo", or even touching Git outside of Github. I'll also describe what kinds of contributions open source software projects are typically looking for. As an example, I use submitting a student solution to a web development exercise from The Odin Project, a free online curriculum for learning web development with Ruby on Rails. You can find more information about that project at http://theodinproject.com.
+                </p><hr>
+                <p id="show">SHOW MORE</p>
+            </section>
+            <section id="comments-section">
+                <h4>New Comment:</h4>
+                <div class="comment-details">
+                    <p class="comment-details">Username: </p>
+                    <input type="text">
+                </div>
+                <p class="comment-details">Comment: </p>
+                <textarea name="" id="" cols="60" rows="1"></textarea>
+                <p id="show">DROP COMMENT</p>
+                
+            </section>
         </div>
         <div id="div-section2">
             <div id="side1">
