Added font awesome icons for upload, subscribe, share and likes in index.html

--- a/index.html
+++ b/index.html
@@ -23,25 +23,49 @@
                 <input type="text" placeholder="Search">
             </div>
             <div id="header3">
-                <button id="search">Search</button>
+                <button id="search">
+                    <i class="fa fa-search"></i>
+                </button>
+                <button id="download">
+                    <i class="fa fa-upload"></i>
+                    <span class="tooltiptext">Upload</span>
+                </button>
                 <button id="sign-in">Sign In</button>
             </div>
         </header>
         <div id="div-section">
             <div id="div-section1">
                 <section id="video-section">
-                    
                     <iframe width="605" height="350" src="https://www.youtube.com/embed/IB7jwQpOLDA"
                         allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
                         allowfullscreen></iframe>
                 </section>
                 <section class="comments-section">
-                    <h1>Kobe Bryant Speaks a day before his death. He predicted his death.</h1>
+                    <h3>Kobe Bryant Speaks a day before his death.</h3>
+                    <div>
+                        <span id="comment-share">
+                            <button id="subscribe">
+                                <span id="comment-subscribe"><i class="fab fa-youtube"> Subscribe</i></span>
+                                <!-- <i class="fa fa-share"> share </i> -->
+                            </button>
+                    </span>
+                        <span id="comment-views">10,482 Views</span><hr id="comment-line">
+                    </div>
+                    <div class="comment-prereq">
+                        <span id="comment-share">
+                                <i class="fa fa-share"> share </i> 
+                        </span>
+                        <span id="comment-reaction">
+                            <i class="fa fa-thumbs-up"> 912 &nbsp;&nbsp; </i>
+                            <i class="fa fa-thumbs-down"> 54 </i> 
+                        </span>
+                    </div>
+                    
                 </section>
                 <section class="comments-section">
                     <h4>Published on Feb 27, 2014</h4>
                     <p>
-                        How do you contribute to open source? In this video, I'll describe the easiest way to make a simple contribution to an open source project -- without using the command line, a text editor, "forking a repo", or even touching Git outside of Github. I'll also describe what kinds of contributions open source software projects are typically looking for. As an example, I use submitting a student solution to a web development exercise from The Odin Project, a free online curriculum for learning web development with Ruby on Rails. You can find more information about that project at http://theodinproject.com.
+                        How do you contribute to open source? In this video, I'll describe the easiest way to make a simple contribution to an open source project -- without using the command line, a text editor, "forking a repo", or even touching Git outside of Github.
                     </p><hr>
                     <p class="show">SHOW MORE</p>
                 </section>
