Modified css file

--- a/index.html
+++ b/index.html
@@ -9,109 +9,85 @@
     <title>Document</title>
 </head>
 
-    <body>
-        <header id="header">
-            <div id="nav-header">
-                <button id="nav-bar"><i class="fas fa-bars"></i></button>
-            </div>
-            <div id="header1">
-                <figure>
-                    <img src="assets/youtube4.png" alt="youtube-logo" width="120" height="50">
-                </figure>
-            </div>
-            <div id="header2">
-                <input type="text" placeholder="Search">
-            </div>
-            <div id="header3">
-                <button id="search">
-                    <i class="fa fa-search"></i>
-                </button>
-                <button id="download">
-                    <i class="fa fa-upload"></i>
-                    <span class="tooltiptext">Upload</span>
-                </button>
-                <button id="sign-in">Sign In</button>
-            </div>
-        </header>
-        <div id="div-section">
-            <div id="div-section1">
-                <section id="video-section">
-                    <iframe width="605" height="350" src="https://www.youtube.com/embed/IB7jwQpOLDA"
-                        allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
-                        allowfullscreen></iframe>
-                </section>
-                <section class="comments-section">
-                    <h3>Kobe Bryant Speaks a day before his death.</h3>
-                    <div>
-                        <span id="comment-share">
-                            <button id="subscribe">
-                                <span id="comment-subscribe"><i class="fab fa-youtube"> Subscribe</i></span>
-                                <!-- <i class="fa fa-share"> share </i> -->
-                            </button>
+<body>
+    <header id="header">
+        <div id="nav-header">
+            <button id="nav-bar"><i class="fas fa-bars"></i></button>
+        </div>
+        <div id="header1">
+            <figure>
+                <img src="assets/youtube4.png" alt="youtube-logo" width="120" height="50">
+            </figure>
+        </div>
+        <div id="header2">
+            <input type="text" placeholder="Search">
+        </div>
+        <div id="header3">
+            <button id="search">
+                <i class="fa fa-search"></i>
+            </button>
+            <button id="download">
+                <i class="fa fa-upload"></i>
+                <span class="tooltiptext">Upload</span>
+            </button>
+            <button id="sign-in">Sign In</button>
+        </div>
+    </header>
+    <div id="div-section">
+        <div id="div-section1">
+            <section id="video-section">
+                <iframe width="605" height="350" src="https://www.youtube.com/embed/IB7jwQpOLDA"
+                    allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
+                    allowfullscreen></iframe>
+            </section>
+            <section class="comments-section">
+                <h3>Kobe Bryant Speaks a day before his death.</h3>
+                <div>
+                    <span id="comment-share">
+                        <button id="subscribe">
+                            <span id="comment-subscribe"><i class="fab fa-youtube"> Subscribe</i></span>
+                            <!-- <i class="fa fa-share"> share </i> -->
+                        </button>
                     </span>
-                        <span id="comment-views">10,482 Views</span><hr id="comment-line">
-                    </div>
-                    <div class="comment-prereq">
-                        <span id="comment-share">
-                                <i class="fa fa-share"> share </i> 
-                        </span>
-                        <span id="comment-reaction">
-                            <i class="fa fa-thumbs-up"> 912 &nbsp;&nbsp; </i>
-                            <i class="fa fa-thumbs-down"> 54 </i> 
-                        </span>
-                    </div>
-                    
-                </section>
-                <section class="comments-section">
-                    <h4>Published on Feb 27, 2014</h4>
-                    <p>
-                        How do you contribute to open source? In this video, I'll describe the easiest way to make a simple contribution to an open source project -- without using the command line, a text editor, "forking a repo", or even touching Git outside of Github.
-                    </p><hr>
-                    <p class="show">SHOW MORE</p>
-                </section>
-                <section class="comments-section">
-                    <h4>New Comment:</h4>
-                    <div class="comment-details">
-                        <p class="comment-details">Username: </p>
-                        <input type="text">
-                    </div>
-                    <p class="comment-details">Comment: </p>
-                    <textarea cols="60" rows="1"></textarea>
-                    <p class="show">DROP COMMENT</p>
-                    
-                </section>
-            </div>
-            <div id="div-section2">
-                <div id="side1">
-                    <ul>
-                        <li class="li-side">
-                            <div class="li-div" style="display: flex;padding: 0px;">
-                                <div style="margin: 0px 10px 10px 0px;">
-                                    <img src="assets/0.jpeg" alt="img" style="height: 94px; width: 168px;">
-                                </div>
-                                <div
-                                    style="font:normal normal normal 12px/normal 'YouTube Noto', Roboto, arial, sans-serif; padding-right: 20px;cursor: pointer;">
-                                    <span
-                                        style="display: block;line-height: 1.2;max-height: 3.5em;font-size: 14px;font-weight:bold;color: rgb(51, 51, 51);">Contributing
-                                        to open source part II: The Real Way</span> <br>
-                                    <span
-                                        style="line-height: 1.4em;height: 1.4em;color: rgb(118, 118, 118);font-size: 11px;">The
-                                        Odin Project</span> <br>
-                                    <span
-                                        style="line-height: 1.4em;height: 1.4em;color: rgb(118, 118, 118);font-size: 11px;">29,985
-                                        views</span> <br>
-                                </div>
-                            </div>
-                            <div>
-                                <span id="s1">Contributing
-                                    to open source part II: The Real Way</span> <br>
-                                <span id="s2">The
-                                    Odin Project</span> <br>
-                                <span id="s3">29,985
-                                    views</span> <br>
-                            </div>
-                        </div>
-                    </li>
+                    <span id="comment-views">10,482 Views</span>
+                    <hr id="comment-line">
+                </div>
+                <div class="comment-prereq">
+                    <span id="comment-share">
+                        <i class="fa fa-share"> share </i>
+                    </span>
+                    <span id="comment-reaction">
+                        <i class="fa fa-thumbs-up"> 912 &nbsp;&nbsp; </i>
+                        <i class="fa fa-thumbs-down"> 54 </i>
+                    </span>
+                </div>
+
+            </section>
+            <section class="comments-section">
+                <h4>Published on Feb 27, 2014</h4>
+                <p>
+                    How do you contribute to open source? In this video, I'll describe the easiest way to make a simple
+                    contribution to an open source project -- without using the command line, a text editor, "forking a
+                    repo", or even touching Git outside of Github.
+                </p>
+                <hr>
+                <p class="show">SHOW MORE</p>
+            </section>
+            <section class="comments-section">
+                <h4>New Comment:</h4>
+                <div class="comment-details">
+                    <p class="comment-details">Username: </p>
+                    <input type="text">
+                </div>
+                <p class="comment-details">Comment: </p>
+                <textarea cols="60" rows="1"></textarea>
+                <p class="show">DROP COMMENT</p>
+
+            </section>
+        </div>
+        <div id="div-section2">
+            <div id="side1">
+                <ul>
                     <li class="li-side">
                         <div class="li-div">
                             <div class="li1">
