--- a/index.html
+++ b/index.html
@@ -74,6 +74,56 @@
                 <p class="show">SHOW MORE</p>
             </section>
             <section class="comments-section">
+                <div>
+                    <p>2 Comments</p>
+                </div>
+                <div class="comments">
+                    <div class="comment-avatar">
+                        <img src="assets/avatar.jpg" alt="user-avatar" width="50" height="50">
+                    </div>
+                    <div class="comment-details">
+                        <div class="details-p1">
+                            <strong>Phillip Musiime</strong><span class="duration">4 days ago</span>
+                        </div>
+                        <div class="details-p2">
+                            <p class="comment-content">We’ve got the curriculum, all you need is the motivation to start reading it.</p>
+                        </div>
+                        <div class="details-p3">
+                            <i class="fa fa-thumbs-up"> 2 &nbsp;&nbsp; </i>
+                        <i class="fa fa-thumbs-down"> 1 </i><span class="duration">Reply</span>
+                        </div>
+                        <div class="details-p4">
+                            <i class="fa fa-caret-down"></i>
+                            <span class="view-reply">
+                                View reply
+                            </span> 
+                        </div>
+                    </div>
+                </div>
+                <div class="comments">
+                    <div class="comment-avatar">
+                        <img src="assets/5.jpeg" alt="user-avatar" width="50" height="50">
+                    </div>
+                    <div class="comment-details">
+                        <div class="details-p1">
+                            <strong>Taofeek Olalere</strong><span class="duration">2 weeks ago</span>
+                        </div>
+                        <div class="details-p2">
+                            <p class="comment-content">Learning to code shouldn’t be hard. We’re making it easier by putting together a comprehensive set of web development tutorials to help transform complete beginners into talented Interneting professionals.</p>
+                        </div>
+                        <div class="details-p3">
+                            <i class="fa fa-thumbs-up"> 4 &nbsp;&nbsp; </i>
+                        <i class="fa fa-thumbs-down"> 8 </i><span class="duration">Reply</span>
+                        </div>
+                        <div class="details-p4">
+                            <i class="fa fa-caret-down"></i>
+                            <span class="view-reply">
+                                View reply
+                            </span> 
+                        </div>
+                    </div>
+                </div>
+                <hr/>
                 <h4>New Comment:</h4>
                 <div class="comment-details">
                     <p class="comment-details">Username: </p>
@@ -82,7 +132,6 @@
                 <p class="comment-details">Comment: </p>
                 <textarea cols="60" rows="1"></textarea>
                 <p class="show">DROP COMMENT</p>
-
             </section>
         </div>
         <div id="div-section2">
