Fix merge conflicts

--- a/index.html
+++ b/index.html
@@ -83,14 +83,11 @@
                 </p>
                 <h4 class="show">SHOW MORE</h5>
             </div>
-            <hr>
-            <p class="show">SHOW MORE</p>
-            </section>
-            <section class="comments-section">
+            <section class="comment-section">
                 <div>
                     <p>2 Comments</p>
                 </div>
-                <div class="comments">
+                <div class="comment">
                     <div class="comment-avatar">
                         <img src="assets/avatar.jpg" alt="user-avatar" width="50" height="50">
                     </div>
@@ -113,7 +110,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="comments">
+                <div class="comment">
                     <div class="comment-avatar">
                         <img src="assets/5.jpeg" alt="user-avatar" width="50" height="50">
                     </div>
