Add margin to comments

--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
             </div>
             <section class="comment-section">
                 <div>
-                    <p>2 Comments</p>
+                    <p class="comment-header">2 Comments</p>
                 </div>
                 <div class="comment">
                     <div class="comment-avatar">
