Edit user image styles in style.css and duplicate comments in index.html\

--- a/index.html
+++ b/index.html
@@ -89,11 +89,11 @@
                 </div>
                 <div class="comment">
                     <div class="comment-avatar">
-                        <img src="assets/avatar.jpg" alt="user-avatar" width="50" height="50">
+                        <img src="assets/avatar.jpg" alt="user-avatar" width="50" height="50" class="user-image">
                     </div>
                     <div class="comment-details">
                         <div class="details-p1">
-                            <strong>Phillip Musiime</strong><span class="duration">4 days ago</span>
+                            <strong class="username">Phillip Musiime</strong><span class="duration">4 days ago</span>
                         </div>
                         <div class="details-p2">
                             <p class="comment-content">We’ve got the curriculum, all you need is the motivation to start reading it.</p>
@@ -112,18 +112,88 @@
                 </div>
                 <div class="comment">
                     <div class="comment-avatar">
-                        <img src="assets/5.jpeg" alt="user-avatar" width="50" height="50">
+                        <img src="assets/5.jpeg" alt="user-avatar" width="50" height="50" class="user-image">
                     </div>
                     <div class="comment-details">
                         <div class="details-p1">
-                            <strong>Taofeek Olalere</strong><span class="duration">2 weeks ago</span>
+                            <strong class="username">Taofeek Olalere</strong><span class="duration">2 weeks ago</span>
                         </div>
                         <div class="details-p2">
-                            <p class="comment-content">Learning to code shouldn’t be hard. We’re making it easier by putting together a comprehensive set of web development tutorials to help transform complete beginners into talented Interneting professionals.</p>
+                            <p class="comment-content">Unlike all the HTML elements we’ve encountered so far, image content is defined outside of the web page that renders it. Fortunately for us, we already have a way to refer to external resources from within an HTML document: absolute, relative, and root-relative URLs.</p>
                         </div>
                         <div class="details-p3">
-                            <i class="fa fa-thumbs-up"> 4 &nbsp;&nbsp; </i>
-                        <i class="fa fa-thumbs-down"> 8 </i><span class="duration">Reply</span>
+                            <i class="fa fa-thumbs-up"> 9 &nbsp;&nbsp; </i>
+                        <i class="fa fa-thumbs-down"> 7 </i><span class="duration">Reply</span>
+                        </div>
+                        <div class="details-p4">
+                            <i class="fa fa-caret-down"></i>
+                            <span class="view-reply">
+                                View reply
+                            </span> 
+                        </div>
+                    </div>
+                </div>
+                <div class="comment">
+                    <div class="comment-avatar">
+                        <img src="assets/13.jpeg" alt="user-avatar" width="50" height="50" class="user-image">
+                    </div>
+                    <div class="comment-details">
+                        <div class="details-p1">
+                            <strong class="username">Lionel Messi Gudicinni</strong><span class="duration">40 seconds ago</span>
+                        </div>
+                        <div class="details-p2">
+                            <p class="comment-content">They’re visible to the user, which means you should put in as much effort into naming your files as you put into creating the content they contain.
+                            </p>
+                        </div>
+                        <div class="details-p3">
+                            <i class="fa fa-thumbs-up"> 105 &nbsp;&nbsp; </i>
+                        <i class="fa fa-thumbs-down"> 6 </i><span class="duration">Reply</span>
+                        </div>
+                        <div class="details-p4">
+                            <i class="fa fa-caret-down"></i>
+                            <span class="view-reply">
+                                View reply
+                            </span> 
+                        </div>
+                    </div>
+                </div>
+                <div class="comment">
+                    <div class="comment-avatar">
+                        <img src="assets/11.jpg" alt="user-avatar" width="50" height="50" class="user-image">
+                    </div>
+                    <div class="comment-details">
+                        <div class="details-p1">
+                            <strong class="username">Adams Jade</strong><span class="duration">3 hours ago</span>
+                        </div>
+                        <div class="details-p2">
+                            <p class="comment-content">Notice how there’s a direct connection between our file/folder names and the URL for the web page they represent. The names of our folders and files determine the slugs for our web pages. </p>
+                        </div>
+                        <div class="details-p3">
+                            <i class="fa fa-thumbs-up"> 90 &nbsp;&nbsp; </i>
+                        <i class="fa fa-thumbs-down"> 2 </i><span class="duration">Reply</span>
+                        </div>
+                        <div class="details-p4">
+                            <i class="fa fa-caret-down"></i>
+                            <span class="view-reply">
+                                View reply
+                            </span> 
+                        </div>
+                    </div>
+                </div>
+                <div class="comment">
+                    <div class="comment-avatar">
+                        <img src="assets/1.jpeg" alt="user-avatar" width="50" height="50" class="user-image">
+                    </div>
+                    <div class="comment-details">
+                        <div class="details-p1">
+                            <strong class="username">Francis Uzoho</strong><span class="duration">7 days ago</span>
+                        </div>
+                        <div class="details-p2">
+                            <p class="comment-content">These naming conventions apply to all of the files in your site—not just HTML files. CSS files, JavaScript files, and images should avoid spaces and have consistent capitalization, too.</p>
+                        </div>
+                        <div class="details-p3">
+                            <i class="fa fa-thumbs-up"> 9 &nbsp;&nbsp; </i>
+                        <i class="fa fa-thumbs-down"> 7 </i><span class="duration">Reply</span>
                         </div>
                         <div class="details-p4">
                             <i class="fa fa-caret-down"></i>
