--- a/index.html
+++ b/index.html
@@ -222,7 +222,7 @@
                 <li class="li-side">
                     <div class="li-div">
                         <div class="li1">
-                            <img src="assets/10.jpeg" alt="img" height="94" width="168">
+                            <img src="assets/17.jpeg" alt="img" height="94" width="168">
                         </div>
                         <div>
                             <span id="s1">Contributing
@@ -449,7 +449,7 @@
                 </div>
             </div>
             <div id="footer-bottom">
-                <ul>
+                <ul id="ul1">
                     <li class="liz">About</li>
                     <li class="liz">Press</li>
                     <li class="liz">Copyright</li>
@@ -465,6 +465,9 @@
                     <li class="liz2">Test new features</li>
                 </ul>
             </div>
+            &copy; Copyright 2020 <a href="https://github.com/teekaytech">teekaytech</a> & <a
+                href="https://github.com/PhillipUg">Phillip Musiime</a>
+
         </footer>
     </div>
 </body>
