--- a/index.html
+++ b/index.html
@@ -81,9 +81,9 @@
                     "forking a
                     repo", or even touching Git outside of Github.
                 </p>
-                <h4 class="show">SHOW MORE</h5>
+                <h4 class="show">SHOW MORE</h4>
             </div>
-            <section class="comment-section">
+            <div class="comment-section">
                 <div>
                     <p class="comment-header">2 Comments</p>
                 </div>
@@ -213,7 +213,7 @@
                         </div>
                     </div>
                 </div>
-            </section>
+            </div>
         </div>
     </div>
     <div class="div-section2">
@@ -222,29 +222,14 @@
                 <li class="li-side">
                     <div class="li-div">
                         <div class="li1">
-                            <img src="assets/17.jpeg" alt="img" height="94" width="168">
+                            <img src="assets/0.jpeg" alt="img" height="94" width="168">
                         </div>
                         <div>
-                            <span id="s1">Contributing
+                            <span class="s1">Contributing
                                 to open source part II: The Real Way</span> <br>
-                            <span id="s2">The
+                            <span class="s2">The
                                 Odin Project</span> <br>
-                            <span id="s3">29,985
-                                views</span> <br>
-                        </div>
-                    </div>
-                </li>
-                <li class="li-side">
-                    <div class="li-div">
-                        <div class="li1">
-                            <img src="assets/9.jpg" alt="img" height="94" width="168">
-                        </div>
-                        <div>
-                            <span id="s1">Contributing
-                                to open source part II: The Real Way</span> <br>
-                            <span id="s2">The
-                                Odin Project</span> <br>
-                            <span id="s3">29,985
+                            <span class="s3">29,985
                                 views</span> <br>
                         </div>
                     </div>
@@ -255,11 +240,11 @@
                             <img src="assets/8.jpg" alt="img" height="94" width="168">
                         </div>
                         <div>
-                            <span id="s1">Contributing
+                            <span class="s1">Contributing
                                 to open source part II: The Real Way</span> <br>
-                            <span id="s2">The
+                            <span class="s2">The
                                 Odin Project</span> <br>
-                            <span id="s3">29,985
+                            <span class="s3">29,985
                                 views</span> <br>
                         </div>
                     </div>
@@ -267,14 +252,14 @@
                 <li class="li-side">
                     <div class="li-div">
                         <div class="li1">
-                            <img src="assets/7.jpeg" alt="img" height="94" width="168">
+                            <img src="assets/17.jpeg" alt="img" height="94" width="168">
                         </div>
                         <div>
-                            <span id="s1">Contributing
+                            <span class="s1">Contributing
                                 to open source part II: The Real Way</span> <br>
-                            <span id="s2">The
+                            <span class="s2">The
                                 Odin Project</span> <br>
-                            <span id="s3">29,985
+                            <span class="s3">29,985
                                 views</span> <br>
                         </div>
                     </div>
@@ -282,14 +267,14 @@
                 <li class="li-side">
                     <div class="li-div">
                         <div class="li1">
-                            <img src="assets/6.jpeg" alt="img" height="94" width="168">
+                            <img src="assets/15.jpeg" alt="img" height="94" width="168">
                         </div>
                         <div>
-                            <span id="s1">Contributing
+                            <span class="s1">Contributing
                                 to open source part II: The Real Way</span> <br>
-                            <span id="s2">The
+                            <span class="s2">The
                                 Odin Project</span> <br>
-                            <span id="s3">29,985
+                            <span class="s3">29,985
                                 views</span> <br>
                         </div>
                     </div>
@@ -297,119 +282,14 @@
                 <li class="li-side">
                     <div class="li-div">
                         <div class="li1">
-                            <img src="assets/5.jpeg" alt="img" height="94" width="168">
+                            <img src="assets/14.jpeg" alt="img" height="94" width="168">
                         </div>
                         <div>
-                            <span id="s1">Contributing
+                            <span class="s1">Contributing
                                 to open source part II: The Real Way</span> <br>
-                            <span id="s2">The
+                            <span class="s2">The
                                 Odin Project</span> <br>
-                            <span id="s3">29,985
-                                views</span> <br>
-                        </div>
-                    </div>
-                </li>
-                <li class="li-side">
-                    <div class="li-div">
-                        <div class="li1">
-                            <img src="assets/4.jpeg" alt="img" height="94" width="168">
-                        </div>
-                        <div>
-                            <span id="s1">Contributing
-                                to open source part II: The Real Way</span> <br>
-                            <span id="s2">The
-                                Odin Project</span> <br>
-                            <span id="s3">29,985
-                                views</span> <br>
-                        </div>
-                    </div>
-                </li>
-                <li class="li-side">
-                    <div class="li-div">
-                        <div class="li1">
-                            <img src="assets/3.jpeg" alt="img" height="94" width="168">
-                        </div>
-                        <div>
-                            <span id="s1">Contributing
-                                to open source part II: The Real Way</span> <br>
-                            <span id="s2">The
-                                Odin Project</span> <br>
-                            <span id="s3">29,985
-                                views</span> <br>
-                        </div>
-                    </div>
-                </li>
-                <li class="li-side">
-                    <div class="li-div">
-                        <div class="li1">
-                            <img src="assets/2.jpeg" alt="img" height="94" width="168">
-                        </div>
-                        <div>
-                            <span id="s1">Contributing
-                                to open source part II: The Real Way</span> <br>
-                            <span id="s2">The
-                                Odin Project</span> <br>
-                            <span id="s3">29,985
-                                views</span> <br>
-                        </div>
-                    </div>
-                </li>
-                <li class="li-side">
-                    <div class="li-div">
-                        <div class="li1">
-                            <img src="assets/1.jpeg" alt="img" height="94" width="168">
-                        </div>
-                        <div>
-                            <span id="s1">Contributing
-                                to open source part II: The Real Way</span> <br>
-                            <span id="s2">The
-                                Odin Project</span> <br>
-                            <span id="s3">29,985
-                                views</span> <br>
-                        </div>
-                    </div>
-                </li>
-                <li class="li-side">
-                    <div class="li-div">
-                        <div class="li1">
-                            <img src="assets/0.jpeg" alt="img" height="94" width="168">
-                        </div>
-                        <div>
-                            <span id="s1">Contributing
-                                to open source part II: The Real Way</span> <br>
-                            <span id="s2">The
-                                Odin Project</span> <br>
-                            <span id="s3">29,985
-                                views</span> <br>
-                        </div>
-                    </div>
-                </li>
-                <li class="li-side">
-                    <div class="li-div">
-                        <div class="li1">
-                            <img src="assets/11.jpg" alt="img" height="94" width="168">
-                        </div>
-                        <div>
-                            <span id="s1">Contributing
-                                to open source part II: The Real Way</span> <br>
-                            <span id="s2">The
-                                Odin Project</span> <br>
-                            <span id="s3">29,985
-                                views</span> <br>
-                        </div>
-                    </div>
-                </li>
-                <li class="li-side">
-                    <div class="li-div">
-                        <div class="li1">
-                            <img src="assets/12.jpeg" alt="img" height="94" width="168">
-                        </div>
-                        <div>
-                            <span id="s1">Contributing
-                                to open source part II: The Real Way</span> <br>
-                            <span id="s2">The
-                                Odin Project</span> <br>
-                            <span id="s3">29,985
+                            <span class="s3">29,985
                                 views</span> <br>
                         </div>
                     </div>
@@ -420,19 +300,155 @@
                             <img src="assets/13.jpeg" alt="img" height="94" width="168">
                         </div>
                         <div>
-                            <span id="s1">Contributing
+                            <span class="s1">Contributing
                                 to open source part II: The Real Way</span> <br>
-                            <span id="s2">The
+                            <span class="s2">The
                                 Odin Project</span> <br>
-                            <span id="s3">29,985
+                            <span class="s3">29,985
                                 views</span> <br>
                         </div>
                     </div>
                 </li>
+                <li class="li-side">
+                    <div class="li-div">
+                        <div class="li1">
+                            <img src="assets/12.jpeg" alt="img" height="94" width="168">
+                        </div>
+                        <div>
+                            <span class="s1">Contributing
+                                to open source part II: The Real Way</span> <br>
+                            <span class="s2">The
+                                Odin Project</span> <br>
+                            <span class="s3">29,985
+                                views</span> <br>
+                        </div>
+                    </div>
+                </li>
+                <li class="li-side">
+                    <div class="li-div">
+                        <div class="li1">
+                            <img src="assets/10.jpeg" alt="img" height="94" width="168">
+                        </div>
+                        <div>
+                            <span class="s1">Contributing
+                                to open source part II: The Real Way</span> <br>
+                            <span class="s2">The
+                                Odin Project</span> <br>
+                            <span class="s3">29,985
+                                views</span> <br>
+                        </div>
+                    </div>
+                </li>
+                <li class="li-side">
+                    <div class="li-div">
+                        <div class="li1">
+                            <img src="assets/7.jpeg" alt="img" height="94" width="168">
+                        </div>
+                        <div>
+                            <span class="s1">Contributing
+                                to open source part II: The Real Way</span> <br>
+                            <span class="s2">The
+                                Odin Project</span> <br>
+                            <span class="s3">29,985
+                                views</span> <br>
+                        </div>
+                    </div>
+                </li>
+                <li class="li-side">
+                    <div class="li-div">
+                        <div class="li1">
+                            <img src="assets/6.jpeg" alt="img" height="94" width="168">
+                        </div>
+                        <div>
+                            <span class="s1">Contributing
+                                to open source part II: The Real Way</span> <br>
+                            <span class="s2">The
+                                Odin Project</span> <br>
+                            <span class="s3">29,985
+                                views</span> <br>
+                        </div>
+                    </div>
+                </li>
+                <li class="li-side">
+                    <div class="li-div">
+                        <div class="li1">
+                            <img src="assets/5.jpeg" alt="img" height="94" width="168">
+                        </div>
+                        <div>
+                            <span class="s1">Contributing
+                                to open source part II: The Real Way</span> <br>
+                            <span class="s2">The
+                                Odin Project</span> <br>
+                            <span class="s3">29,985
+                                views</span> <br>
+                        </div>
+                    </div>
+                </li>
+                <li class="li-side">
+                    <div class="li-div">
+                        <div class="li1">
+                            <img src="assets/4.jpeg" alt="img" height="94" width="168">
+                        </div>
+                        <div>
+                            <span class="s1">Contributing
+                                to open source part II: The Real Way</span> <br>
+                            <span class="s2">The
+                                Odin Project</span> <br>
+                            <span class="s3">29,985
+                                views</span> <br>
+                        </div>
+                    </div>
+                </li>
+                <li class="li-side">
+                    <div class="li-div">
+                        <div class="li1">
+                            <img src="assets/3.jpeg" alt="img" height="94" width="168">
+                        </div>
+                        <div>
+                            <span class="s1">Contributing
+                                to open source part II: The Real Way</span> <br>
+                            <span class="s2">The
+                                Odin Project</span> <br>
+                            <span class="s3">29,985
+                                views</span> <br>
+                        </div>
+                    </div>
+                </li>
+                <li class="li-side">
+                    <div class="li-div">
+                        <div class="li1">
+                            <img src="assets/2.jpeg" alt="img" height="94" width="168">
+                        </div>
+                        <div>
+                            <span class="s1">Contributing
+                                to open source part II: The Real Way</span> <br>
+                            <span class="s2">The
+                                Odin Project</span> <br>
+                            <span class="s3">29,985
+                                views</span> <br>
+                        </div>
+                    </div>
+                </li>
+                <li class="li-side">
+                    <div class="li-div">
+                        <div class="li1">
+                            <img src="assets/1.jpeg" alt="img" height="94" width="168">
+                        </div>
+                        <div>
+                            <span class="s1">Contributing
+                                to open source part II: The Real Way</span> <br>
+                            <span class="s2">The
+                                Odin Project</span> <br>
+                            <span class="s3">29,985
+                                views</span> <br>
+                        </div>
+                    </div>
+                </li>
+
             </ul>
         </div>
     </div>
-    </div>
+
     <div id="div-footer">
         <footer id="footer">
             <div id="footer-top">
